WIP: More handlers
// FIXME: split this up

Change-Id: Ib3170e6df4d21a3a002d2386844541a08d807f9a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>